--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Social Science Data Editors
-version: 
+version: v1.0
+date: 2023-01-13
 # authors: This should be replaced by contributor lookup - there's a Github thing to do that.
 description: >- # this means to ignore newlines until "baseurl:"
   These pages contains useful information for any replication package, such as where to find Terms of Use, whether data can be distributed, etc.
